(add) styles bundle

--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="main/styles.css"/>
     <title>Story Analytics</title>
   </head>
   <body>
     <div id="root"/>
+    <script src="main/bundle.js"></script>
   </body>
-  <script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
-  </script>
-  <script src="main/bundle.js"></script>
 </html>
